# altjack

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
firmware/attiny/rev1.0/h4ptix/: .gitignore  platformio.ini
firmware/attiny/rev1.0/h4ptix/src/: main.cpp
src/: device.rs  hid_device.rs  lib.rs  main.rs  usb_device.rs
udev/: 70-altjack.rules
