[package]
name = "altjack"
version = "0.1.0"
edition = "2024"

[dependencies]
nusb = "0.1.13"
clap = "4.5.37"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
humantime = "2.2.0"
once_cell = "1.21.3"
anyhow = "1.0.98"

[target.'cfg(any(target_os="linux"))'.dependencies]
rustix = { version = "1.0.7", features = ["fs", "event", "net"] }
linux-raw-sys = { version = "0.9.4", features = ["ioctl"] }
hidapi = { version = "2.6.3", features = ["linux-static-hidraw"] }

[target.'cfg(target_os="windows")'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_Devices_Usb", "Win32_Devices_DeviceAndDriverInstallation", "Win32_Foundation", "Win32_Devices_Properties", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_IO", "Win32_System_Registry", "Win32_System_Com"] }
hidapi = { version = "2.6.3", features = ["windows-native"] }

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.10.0"
core-foundation-sys = "0.8.4"
io-kit-sys = "0.4.0"
hidapi = { version = "2.6.3"}

[profile.release]
strip = true
lto = true
codegen-units = 1
